When creating a virtual server with the create-domain API command, custom fields can be set with the --field-name flag.
Added a link to the Mail Aliases page to also show normally hidden internal aliases, such as those for Mailman and spam traps.
Improved support for backing up to and restoring from IPv6 SSH and FTP servers.
When a virtual server's plan is changed on the Edit Virtual Server page, quotas are also updated to match those from the plan.
German translation updates, thanks to Thomas Suess.
Added a field to the DKIM form for entering additional domains to sign email for, even if they are not hosted on the system.
MySQL logins and databases and DNS zones can now be created on a central Cloudmin provisioning server, instead of on the Virtualmin system. This allows Virtualmin to be run on a system with less RAM, disk and CPU, while still providing the same functionality.
---- Changes since 3.83 ----
Updated the Redmine script installer to version 1.1.0, Z-push to 1.5, DokuWiki to 2010-11-07a, ZenPhoto to 1.4.0.1, Zikula to 1.2.5, Bugzilla to 3.6.4, phpMyFAQ to 2.6.14, and SugarCRM to 6.1.1.
Email to users that are with 100 kB of their quota is now bounced back to the sender, to prevent the mailbox from completely filling up and breaking Dovecot's avility to delete messages
Email to users that are with 100 kB of their quota is now bounced back to the sender, to prevent the mailbox from completely filling up and breaking Dovecot's avility to delete messages.
When adding an IPv6 address to a virtual server, an reverse DNS entry for the IP is also created if the IPv6 reverse zone is hosted on the Virtualmin system.
The create-domain API command now lets you set a custom group name for a new virtual server with the C<--group> flag. If a custom username is set, the group name defaults to matching it.
Removed the 'Domain *' directive from the DKIM configuration, which was breaking signing for domains other than those hosted by Virtualmin (such as email from cron).