@@ -2056,7 +2056,7 @@ backup_feature_webmin=Webmin ACL files
 backup_ehomeformat=A new format backup can only be done when doing one file per domain
 backup_ehomeformat2=A new format backup can only be done when the home directory is included
 backup_ehomeformat3=A new format backup can only be done when all virtual servers have a home directory ($1 does not)
-backup_global=Backing up Virtualmin settings ($1) ..
+backup_global2=Backing up Virtualmin settings ..
 backup_niceftp=$1 on FTP server $2
 backup_nicescp=$1 on SSH server $2
 backup_nicefile=local file $1
@@ -2284,7 +2284,7 @@ restore_download=Downloading archive from FTP server ..
 restore_downloadssh=Downloading archive from SSH server ..
 restore_downloads3=Downloading archive from Amazon S3 server ..
 restore_downloadfailed=.. download failed! $1
-restore_global=Restoring Virtualmin settings ($1) ..
+restore_global2=Restoring Virtualmin settings ..
 restore_phpmods=Enabling PHP modules for restored scripts ..
 restore_ephpmodserr=.. some PHP modules could not be installed.
 restore_phpmodsdone=.. the following PHP modules were installed : $1
